CSS calc()/min()/max()/clamp()を実装
数値・絶対長さ(px/pt/in/cm/mm/pc)・パーセントの四則演算に対応。
絶対長さとパーセントが混在する結果(例: calc(50% + 10px))は新設の
LengthType.MIXEDとCalcLengthValueで表現し、レイアウト時(基準値確定時)
に解決する。width/height/min/max-*/margin/padding/top/right/bottom/left/
line-height/font-sizeで利用可能。

- css/token/Tokens.java: ph-cssのcalc()数式木を明示的スタック(Frame)で
  逆ポーランド記法に変換(再帰不使用)。関数引数の再帰的トークン化
  (var()等の既存経路)には深さ上限を追加(安全弁)。
- css/util/CalcValueUtils.java: RPNスタックマシンによる評価器。number/
  length-percentageの型混在チェック、0除算・length同士の乗除算の拒否、
  min/max/clampの静的比較可能性判定(基準値なしに比較できないpxと%の
  混在は評価失敗として安全に無効値へ)。
- layout/box/params/{Length,Dimension,Insets,Offset}.java・LayoutUtils:
  LengthType.MIXED(絶対+割合)の格納・解決を追加。resolve系メソッドの
  重複switchをlengthType()/primaryPart()/extraRatioPart()等の共有ヘルパへ
  統合。
- レイアウト側の各所(表セル・行・自動列幅交渉・継続断片・インライン
  マージン・ページ軸min/max等)にMIXED対応を追加。表の自動/固定列幅
  交渉のようにMIXEDを正しく表現できないアルゴリズムはAUTO相当へ安全に
  縮退させる(docs/PLAN.md参照)。

意図的に未対応: var()(カスケード時解決が必要な別アーキテクチャ)、
revert、calc()内のem/rem/ex/ch混在、min/max/clampでの絶対長さ+割合の
静的比較。

codex/grok外部レビューで発見した実バグ(LineHeightのClassCastException・
複数箇所のMIXED未対応switch・継続断片での割合成分欠落)を修正済み。
三層検証済み(unit test 500件超 / imageTest -PforceRelease 591文書0件
失敗 / unitRemote)。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>